--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
     "description": "",
     "main": "server.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "server.js",
-      "watch": "server.js",
-      "seed": "cd backend && npm run seed"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "watch": "server.js",
+        "seed": "cd backend && npm run seed"
     },
-   
     "author": "",
     "license": "ISC",
-     "dependencies": {
-      "console.table": "^0.10.0",
-      "express" :"^4.17.1",
-      "inquirer": "^8.2.4",
-      "mysql2": "^2.2.5"
-     }
-  }
+    "dependencies": {
+"bcrypt": "^5.1.1",
+        "connect-session-sequelize": "^7.1.7",
+        "console.table": "^0.10.0",
+        "express": "^4.17.1",
+        "express-handlebars": "^7.1.2",
+        "express-session": "^1.18.0",
+        "inquirer": "^8.2.4",
+        "mysql2": "^2.2.5"
+    }
+}
